# e2audiobook

./: .gitignore  Dockerfile  README.md  STANDARDS.md  docker-compose.yml  poc.py  progress.md  pyproject.toml  spec.md
.github/workflows/: publish.yml
narrator/: abs_client.py  app.py  config.py  health.py  job_queue.py  main.py  notifications.py  watcher.py  worker.py
narrator/api/: __init__.py  routes_books.py  routes_jobs.py  routes_queue.py  routes_settings.py  routes_system.py  routes_voices.py
narrator/core/: calibre_reader.py  epub_extractor.py  folder_reader.py  m4b_builder.py  output_manager.py  tts_client.py
narrator/db/: database.py  migrations.py  models.py
narrator/web/static/css/: style.css
narrator/web/static/js/: app.js
narrator/web/templates/: base.html  book_detail.html  dashboard.html  library.html  logs.html  queue.html  settings.html  stats.html
narrator/web/templates/partials/: library_table.html
