[project]
name = "cwa-narrator"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ebooklib",
    "beautifulsoup4",
    "lxml",
    "requests",
    "pydub",
    "audioop-lts",
    "Pillow",
    "nltk",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
